--- a/styles/style-index/index-ipad.css
+++ b/styles/style-index/index-ipad.css
@@ -5,23 +5,26 @@
 
 
     body {
-        height: 100vh;
-        background-color: aquamarine;
+        margin: auto;
+        /*background-color: aquamarine;*/
     }
 
     header>a>img#logo {
-
-        height: 80px;
+        margin-left: 7%;
+        height: 78px;
     }
 
 
     header>a#Link-login {
         width: 3em;
+        margin-right: 7%;
     }
 
 
     main {
-        gap: 2em;
+        flex-direction: column;
+        flex-direction: column-reverse;
+        gap: 1em;
         padding: 30px
     }
 
@@ -43,7 +46,7 @@
 
     div#container_one>p,
     a#link-whaatsApp {
-        font-size: 11px;
+        font-size: 14px;
 
     }
 
@@ -58,7 +61,7 @@
 
 
     main>#imagem-one {
-        height: 14em;
+        height: 12em;
     }
 
     /*FORUMLARIO */
@@ -71,44 +74,155 @@
 
     form {
 
-        width: 15em;
-        padding: 10px;
+        width: 18em;
+        padding:20px;
 
     }
 
 
 
     form>h2 {
-        font-size: 14px;
+        font-size: 20px;
     }
 
     form>label {
-        font-size: 13px;
+        font-size: 17px;
+    }
+
+    form > input{
+        font-size: 18px;
     }
 
 
     input#bottom-consultar {
         padding: 8px;
-        font-size: 12px;
+        font-size: 14px;
 
     }
 
 
     img#img-consultar {
+        display: none;
         height: 169px;
     }
 
 
-    input::placeholder {
-        font-size: 11px;
+    form > input::placeholder {
+        font-size: 14px;
         color: #84a0ab
+    }
+
+}
+
+
+
+
+/*ADAPTAÇÃO*/
+
+@media screen and (min-width: 769px) and (max-width:1024px ) {
+    /*body{
+        background-color: rgb(133, 13, 13);
+    }*/
+
+    header{
+        padding: 10px;
+    }
+
+    header>a>img#logo {
+
+        height: 100px;
+        
+    }
+
+    main{
+        flex-direction: column;
+        flex-direction: column-reverse;
+        gap: 1em;
+    }
+
+    div#container_one>h1 {
+        font-size: 27px;
+
+    }
+
+
+    div#container_one>p {
+        font-size: 18px;
+    }
+
+
+    div#container_one {
+
+        width: 20em;
+        padding: 8px;
+    }
+
+    div#container_one>a#link-consultar {
+        padding:8px;
+        font-size:16px;
+        width: 80%;
+
     }
 
 
 
+    main>#imagem-one {
+        height: 18em;
+    }
 
+    /*FORMULARIO */
+
+
+    form {
+
+
+        justify-content: center;
+        width: 20em;
+
+        padding: 5px;
+
+    }
+
+
+    
+    form>h2 {
+        font-size: 22px;
+       
+    }
+
+    form>label {
+        font-size: 21px;
+    }
+
+
+    input#bottom-consultar {
+        padding: 9px;
+        width: 100%;
+        font-size: 17px;
+    }
+
+    div#container_submit{
+        margin-top: 0em;
+    }
+
+
+    img#img-consultar {
+        display: none;
+        height: 150px;
+    }
+
+    form > input {
+        font-size:20px;
+    }
+
+
+    input::placeholder {
+        font-size:19px;
+        color: #84a0ab
+    }
 
 }
+
 
 
 
