--- a/styles/style-index/index-screen.css
+++ b/styles/style-index/index-screen.css
@@ -2,9 +2,9 @@
 
 @media screen and (min-width: 220px) and (max-width:480px) {
 
-    body{
+    body {
         height: 100vh;
-        background-color: rgb(17, 17, 184);
+        /*background-color: rgb(17, 17, 184);*/
     }
 
 
@@ -18,10 +18,10 @@
     header>a#Link-login {
         width: 3em;
         font-size: 12px;
-        margin-right:8%;
+        margin-right: 8%;
         animation: none;
     }
-    
+
     main {
         flex-direction: column;
         flex-direction: column-reverse;
@@ -39,14 +39,14 @@
         width: 60%;
         padding: 7px;
     }
-    
+
 
     div#container_one>h4 {
         font-size: 14px;
     }
 
     div#container_one>h1 {
-        font-size:21px;
+        font-size: 21px;
     }
 
     div#container_one>p,
@@ -60,36 +60,36 @@
         padding: 8px;
         font-size: 13px;
         width: 60%;
-       
-    }
-      
 
-    
+    }
+
+
+
 
     main>#imagem-one {
         height: 13em;
     }
-    
 
-    
+
+
     /*FORUMLARIO */
 
     section {
 
         flex-direction: column;
-        gap:14px;
+        gap: 14px;
         padding: 10px;
     }
 
     form {
 
-       
+
         width: 14em;
-        padding: 5px;
+        padding: 20px;
 
     }
 
-    
+
     form>h2 {
         font-size: 15px;
     }
@@ -98,7 +98,7 @@
         font-size: 12px;
     }
 
-    
+
     input#bottom-consultar {
         padding: 6px;
         font-size: 12px;
@@ -107,17 +107,99 @@
     }
 
     img#img-consultar {
-        height:140px;
+        height: 140px;
     }
 
 
-    input::placeholder{
+    input::placeholder {
         font-size: 10px;
         color: #84a0ab
     }
 
 
 
-    
-   
+
+
+}
+
+
+/*ADAPTAÇÃO*/
+
+
+@media screen and (min-width: 360px) and (max-width:740px) {
+    /*  body{
+        background-color: black;
+    }
+*/
+
+
+    header>a>img#logo {
+
+        height: 56px;
+        margin-left: 10%;
+    }
+
+
+    header>a#Link-login {
+        margin-right: 10%;
+    }
+
+
+    div#container_one>p,
+    a#link-whaatsApp {
+        font-size: 12px;
+        width: 90%;
+
+    }
+
+
+    div#container_one>a#link-consultar {
+
+        padding: 8px;
+        font-size: 13px;
+        width: 70%;
+
+    }
+
+    section {
+        margin: auto;
+    }
+
+    form {
+        justify-content: center;
+
+    }
+
+    img#img-consultar {
+        display: none;
+
+    }
+
+
+
+
+}
+
+
+/*adaptção*/
+
+@media screen and (min-width: 280px) and (max-width:653px) {
+    /*body{
+        background-color: bisque;
+    }*/
+
+    div#container_one>p,
+    a#link-whaatsApp {
+        font-size: 10px;
+        width: 90%;
+
+    }
+
+    div#container_one>a#link-consultar {
+
+        padding: 8px;
+        font-size: 10px;
+        width: 70%;
+
+    }
 }
