--- a/styles/style-login/login-ipad.css
+++ b/styles/style-login/login-ipad.css
@@ -2,10 +2,10 @@
 
 @media screen and (min-width: 481px) and (max-width:768px) {
 
-  body{
+  /*body{
     background-color: pink;
   }
-
+*/
   main{
     width: 15em;
   }
