--- a/styles/style-login/login-screen.css
+++ b/styles/style-login/login-screen.css
@@ -2,10 +2,10 @@
 
 @media screen and (min-width: 220px) and (max-width:480px) {
 
-body{
-  background-color: orange;
+/*body{
+  background-color: orange
 }
-
+*/
   main{
     width: 10em;
   }
