--- a/styles/style-sistema/sistema-ipad.css
+++ b/styles/style-sistema/sistema-ipad.css
@@ -1,2 +1,138 @@
 
 
+@media screen and (min-width:711px) and (max-width:1170px){
+    body {
+      background-color: rgb(200, 151, 38);
+    }
+  
+  
+    header{
+      padding: 10px;
+    }
+  
+    header>img#img-logo {
+      height: 80px;
+      margin-left: 3%;
+    }
+  
+    header>div#container-log{
+      margin-right: 4%;
+      padding: 10px;
+    }
+  
+    header>div#container-log>img#img-login {
+      height: 30px;
+    }
+  
+    header>div#container-log>a {
+      font-size:15px;
+    }
+  
+    main{
+      display: flex;
+      flex-direction: column;
+      width: auto;
+      padding: 8px;
+     
+    }
+
+    div.container-cards {
+        width: auto; 
+    
+    }
+  
+    div.card {
+     justify-content: none;
+      padding: 10px;
+      width: 120px;
+      height:80px;
+  }
+  
+    
+    
+    div.card>img.img-card {
+      height: 45px;
+      padding-top: 5px;
+    }
+    
+    div#card-encerrar {
+      width: 17em;
+    }
+  
+    h3.card-text{
+      font-size: 15px;
+    }
+  
+    
+  
+  }
+
+
+  @media screen and (min-width:912px) and (max-width:1368px){
+
+    body{
+        background-color: black;
+    }
+
+    
+    header{
+        padding: 0px;
+      }
+    
+      header>img#img-logo {
+        height: 100px;
+        margin-left: 3%;
+      }
+    
+      header>div#container-log{
+        margin-right: 4%;
+        padding: 14px;
+      }
+    
+      header>div#container-log>img#img-login {
+        height: 40px;
+      }
+    
+      header>div#container-log>a {
+        font-size:19px;
+      }
+    
+      main{
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        padding: 10px;
+       
+      }
+  
+      div.container-cards {
+          width: auto; 
+      
+      }
+    
+      div.card {
+       justify-content: none;
+        padding: 15px;
+        width: 120px;
+        height:80px;
+    }
+    
+      
+      
+      div.card>img.img-card {
+        height: 60px;
+        padding-top: 0px;
+      }
+      
+      div#card-encerrar {
+        width: 18em;
+      }
+    
+      h3.card-text{
+        font-size: 19px;
+      }
+    
+      
+    
+
+  }
